{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 13,
  "lineage": "33d4f815-be66-2d52-2b99-f6c850a2d8a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b19203666b407931",
            "arn": "arn:aws:ec2:us-east-1:812045307744:elastic-ip/eipalloc-0b19203666b407931",
            "domain": "vpc",
            "id": "eipalloc-0b19203666b407931",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-245-119.compute-1.amazonaws.com",
            "public_ip": "3.211.245.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "unified-security-hub-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-nat-eip",
              "Project": "unified-security-hub"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:internet-gateway/igw-0f3a3672ecf4aee38",
            "id": "igw-0f3a3672ecf4aee38",
            "owner_id": "812045307744",
            "tags": {
              "Name": "unified-security-hub-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-igw",
              "Project": "unified-security-hub"
            },
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b19203666b407931",
            "association_id": "eipassoc-0dc7000bb2fcf25ca",
            "connectivity_type": "public",
            "id": "nat-0afe6dbee530d5c8e",
            "network_interface_id": "eni-040262aea40026f03",
            "private_ip": "10.0.1.227",
            "public_ip": "3.211.245.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-068131621641da2c7",
            "tags": {
              "Name": "unified-security-hub-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-nat",
              "Project": "unified-security-hub"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:route-table/rtb-06755eb2241c8ccc8",
            "id": "rtb-06755eb2241c8ccc8",
            "owner_id": "812045307744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afe6dbee530d5c8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "unified-security-hub-dev-private-rt",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-private-rt",
              "Project": "unified-security-hub",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:route-table/rtb-06aff29d58935ddd3",
            "id": "rtb-06aff29d58935ddd3",
            "owner_id": "812045307744",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3a3672ecf4aee38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "unified-security-hub-dev-public-rt",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-public-rt",
              "Project": "unified-security-hub",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075afb079bcb4b0cc",
            "route_table_id": "rtb-06755eb2241c8ccc8",
            "subnet_id": "subnet-04b85a394bf2713e8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef71903f2710942e",
            "route_table_id": "rtb-06755eb2241c8ccc8",
            "subnet_id": "subnet-00ed837863b73311d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0236b4ab5f1cc767b",
            "route_table_id": "rtb-06aff29d58935ddd3",
            "subnet_id": "subnet-068131621641da2c7"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:subnet/subnet-04b85a394bf2713e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b85a394bf2713e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812045307744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unified-security-hub-dev-private-a",
              "Purpose": "sast",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-private-a",
              "Project": "unified-security-hub",
              "Purpose": "sast",
              "Tier": "private"
            },
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:subnet/subnet-00ed837863b73311d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ed837863b73311d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812045307744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unified-security-hub-dev-private-b",
              "Purpose": "pentest",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-private-b",
              "Project": "unified-security-hub",
              "Purpose": "pentest",
              "Tier": "private"
            },
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:subnet/subnet-068131621641da2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068131621641da2c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812045307744",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unified-security-hub-dev-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-public",
              "Project": "unified-security-hub",
              "Tier": "public"
            },
            "vpc_id": "vpc-021c30739f6221b99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812045307744:vpc/vpc-021c30739f6221b99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065608a646eca8ab8",
            "default_route_table_id": "rtb-0d72cb528034dfb42",
            "default_security_group_id": "sg-003c2a946952a3939",
            "dhcp_options_id": "dopt-030ec6d2af5615daa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021c30739f6221b99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d72cb528034dfb42",
            "owner_id": "812045307744",
            "tags": {
              "Name": "unified-security-hub-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "unified-security-hub-dev-vpc",
              "Project": "unified-security-hub"
            }
          }
        }
      ]
    }
  ]
}